a11y mochitest fix for bug 483573

--- a/accessible/tests/mochitest/test_elm_media.html
+++ b/accessible/tests/mochitest/test_elm_media.html
@@ -33,6 +33,9 @@ https://bugzilla.mozilla.org/show_bug.cgi?id=483573
           { // slider of progress bar
             role: ROLE_SLIDER
           },
+          { // duration label
+            role: ROLE_LABEL
+          },
           { // volume button
             role: ROLE_PUSHBUTTON
           }
