--- a/accessible/tests/mochitest/test_actions_aria.html
+++ b/accessible/tests/mochitest/test_actions_aria.html
@@ -14,7 +14,9 @@
   <script type="application/javascript"
           src="chrome://mochikit/content/a11y/accessible/common.js"></script>
   <script type="application/javascript"
-          src="chrome://mochikit/content/a11y/accessible/nsIAccessible_actions.js"></script>
+          src="chrome://mochikit/content/a11y/accessible/events.js"></script>
+  <script type="application/javascript"
+          src="chrome://mochikit/content/a11y/accessible/actions.js"></script>
 
   <script type="application/javascript">
     function doTest()
@@ -118,11 +120,11 @@
 
   <div id="clickable" onclick="">Clickable text</div>
 
-  <div id="button" role="button">Button</span>
+  <div id="button" role="button">Button</div>
 
-  <div id="checkbox_unchecked" role="checkbox">Checkbox</span>
+  <div id="checkbox_unchecked" role="checkbox">Checkbox</div>
 
-  <div id="checkbox_checked" role="checkbox" aria-checked="true">Checkbox</span>
+  <div id="checkbox_checked" role="checkbox" aria-checked="true">Checkbox</div>
 
   <div id="combobox_collapsed" role="combobox">
     <div id="option" role="option">Option of collapsed combobox</div>
