Bug 490287 - slider of audio/video element hasn't accessible name, r=marcoz, davidb, dolske, mconor, l10n, sr=neil, a=beltzner

--- a/accessible/tests/mochitest/test_elm_media.html
+++ b/accessible/tests/mochitest/test_elm_media.html
@@ -64,9 +64,10 @@ https://bugzilla.mozilla.org/show_bug.cgi?id=483573
             role: ROLE_PROGRESSBAR
           },
           { // slider of progress bar
-            role: ROLE_SLIDER
+            role: ROLE_SLIDER,
+            name: "0:00 of 0:01 elapsed"
           },
-          { // duration label
+          { // duration label, role="presentation"
             role: ROLE_LABEL
           },
           { // volume button
